# calculatorclionpridemic

./: CMakeLists.txt  dockerfile  main.cpp
.github/workflows/: cmake.yml
calculator/: CMakeLists.txt
test/: CMakeLists.txt
